#2954 curator api disease agnostic (#2)
* Case form working with Day 0 schema

* day 0 case schema implemented

* updated Cypress test

* added dynamic prefetched pathogen in case form

* fixed bugs and tests

* disabled all tests file in Cypress

* fixed linting errors

* day0 case schema implemented (before further breaking changes)

* refactored day 0 case schema

* new case form in curtor ui refactored

* bulk case uploads refactored

* Cypress tests fixed

* unit tests passing

* updated Cypress record key

* updated Cypress test

* fixed linting errors

* updated Cypress test

* fixed unit test

* updated unit test

* Cypress test fix

* Added location seeding to failing tests

* fixed bulk case form tests

* fixed Cypress tests

* fixed typo

* updated API tests

* updated API test

* fixed data service tests

* updated Cypress test

* Updated Cypress test

* enabled cypress tests recording

* disabled Cypress tests recording

* changes after code review
