# data-serving/data-service/src/model/travel-history.ts
@@ -1,16 +1,25 @@
-import { TravelDocument, travelSchema } from './travel';
+import { YesNo } from '../types/enums';
 
 import mongoose from 'mongoose';
 
 export const travelHistorySchema = new mongoose.Schema(
     {
-        travel: [travelSchema],
-        traveledPrior30Days: Boolean,
+        travelHistory: {
+            type: String,
+            enum: YesNo,
+        },
+        travelHistoryEntry: Date,
+        travelHistoryStart: String,
+        travelHistoryLocation: String,
+        travelHistoryCountry: String,
     },
     { _id: false },
 );
 
 export type TravelHistoryDocument = mongoose.Document & {
-    travel: [TravelDocument];
-    traveledPrior30Days: boolean;
+    travelHistory: YesNo;
+    travelHistoryEntry: Date;
+    travelHistoryStart: string;
+    travelHistoryLocation: string;
+    travelHistoryCountry: string;
 };
