# data-serving/data-service/src/model/travel.ts
@@ -1,12 +1,11 @@
 import { DateRangeDocument, dateRangeSchema } from './date-range';
-import { FuzzyLocationDocument, fuzzyLocationSchema } from './location';
 
 import mongoose from 'mongoose';
 
 export const travelSchema = new mongoose.Schema(
     {
         dateRange: dateRangeSchema,
-        location: fuzzyLocationSchema,
+
         methods: [String],
         purpose: String,
     },
@@ -15,7 +14,6 @@ export const travelSchema = new mongoose.Schema(
 
 export type TravelDocument = mongoose.Document & {
     dateRange: DateRangeDocument;
-    location: FuzzyLocationDocument;
     methods: [string];
     purpose: string;
 };
