# data-serving/data-service/src/types/enums.ts
@@ -1,0 +1,12 @@
+export enum CaseStatus {
+    Confirmed = 'confirmed',
+    Suspected = 'suspected',
+    Discarded = 'discarded',
+    OmitError = 'omit_error',
+}
+
+export enum YesNo {
+    Y = 'Y',
+    N = 'N',
+    NA = 'NA',
+}
